--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,34 @@
+body {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+h1, p {
+  margin: 0;
+  font-weight: 100;
+}
+
+#root {
+  width: 100vw;
+  height: 100vh;
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+}
+
 $primary: #d17b46;
 h1 {
-  color: $primary
+  color: $primary;
+}
+
+img {
+  width: 300px;
+  height: 300px;
+}
+
+p {
+  font-size: 20px;
+}
+
+a {
+  text-decoration: none;
 }
