--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,16 @@
+/* font */
+@import url('https://indestructibletype.com/fonts/Jost.css');
+
+/* general */
 body {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Jost, sans-serif;
   margin: 0;
+  font-weight: 00;
 }
 
 h1, p {
   margin: 0;
-  font-weight: 100;
+  font-weight: 400;
 }
 
 #root {
@@ -21,7 +26,7 @@ h1 {
   color: $primary;
 }
 
-img {
+svg {
   width: 300px;
   height: 300px;
 }
