--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -2,6 +2,16 @@
 @import url('https://indestructibletype.com/fonts/Jost.css');
 
 $primary: #d17b46;
+$secondary: #6e4d12;
+$black: #332927;
+$gray1: #d8d8e0;
+$gray2: #babbc2;
+$blue: #2977b6;
+$error: #f44138;
+$inactive: #c2c2c2;
+$light-primary: #eda67b;
+$dark-background: #8c8c8b;
+$light-background: #f8f8fa;
 
 body {
   margin: 0;
@@ -83,4 +93,22 @@ h1, h2, h3, p, li, a {
   position: absolute;
   bottom: 0;
   left: 0;
+  display: flex;
+  align-items: stretch;
+
+  // Styling 
+  background-color: $light-background;
+}
+
+.left-view, .right-view {
+  height: 100%;
+  flex: auto;
+}
+
+.left-view {
+  width: 40%;
+}
+
+.right-view {
+  width: 60%;
 }
