Pull data from server

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -138,6 +138,9 @@ h4 {
 
 .right-view {
   width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 #taskinfo > .card {
