--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -147,16 +147,37 @@ h4 {
   justify-content: center;
 }
 
-#taskinfo > .card {
-  height: calc(100% - 24px);
+#taskinfo {
+  font-size: 18px; 
+
+  .card {
+    height: calc(100% - 24px);
+  }
 }
 
 .task-title {
   text-align: center;
 }
 
-.task-description {
-  margin-top: 8px;
+.task-description, .task-due {
+  margin-top: 16px;
+}
+
+.task-due {
+  cursor: pointer;
+  display: flex;
+
+  &:hover {
+    color: black;
+  }
+
+  p {
+    flex: 1 1 auto;
+  }
+
+  svg {
+    flex: none;
+  }
 }
 
 #tasklist .card {
