--- a/src/app/stylesheets/_content_window.scss
+++ b/src/app/stylesheets/_content_window.scss
@@ -12,6 +12,7 @@
   left: 0;
   display: flex;
   align-items: stretch;
+  z-index: -1;
 
   // Styling 
   background-color: #f4f4fa;
@@ -82,10 +83,6 @@
   & * {
     vertical-align: middle;
     display: inline-block;
-  }
-
-  .add-icon, .remove-icon {
-    cursor: pointer;
   }
 }
 
