--- a/src/app/stylesheets/_modals.scss
+++ b/src/app/stylesheets/_modals.scss
@@ -4,28 +4,35 @@
 .modal {
   z-index: 3;
   background: white;
-  border-radius: 16px;
   position: fixed;
   overflow: auto;
 }
 
-@mixin dimensions($width, $height, $padding) {
+@mixin centered-dimensions($width, $height, $padding) {
   width: $width;
   height: $height;
   padding: $padding;
-  left: (100% - $width) / 2;
-  top: (100% - $height) / 2;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
-#dark-background {
-  background: rgba(0, 0, 0, 0.3);
+%small-modal {
+  border-radius: 8px;
+  border: 1px solid rgba(66, 71, 84, 0.14);
+  box-shadow: 0 3px 12px rgba(66, 71, 84, 0.14);
+  padding: 8px;
+}
+
+.modal-background {
   height: 100vh;
   width: 100vw;
   z-index: 2;
 }
 
 #labels-selector {
-  @include dimensions(50%, 50%, 16px);
+  @include centered-dimensions(50%, 50%, 16px);
+  border-radius: 16px;
 
   & > .remove-icon {
     position: absolute;
@@ -49,9 +56,44 @@
     margin: 6px 0;
     cursor: pointer;
 
-    p, svg {
-      @extend %vertical-align-middle;
+    @extend %align-with-icon;
+
+    svg {
       fill: white;
     }
+  }
+}
+
+#profile {
+  top: 50px;
+  right: 8px;
+  
+  @extend %small-modal;
+
+  & > div {
+    @extend %align-with-icon;
+  }
+}
+
+#tasklist-selector {
+  width: 50%;
+  top: 50px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  
+  @extend %small-modal;
+}
+
+.overview-tasklist {
+  margin: 4px;
+  padding: 4px;
+  border-radius: 4px;
+
+  & > div > h3, & > div > svg {
+    @extend %vertical-align-middle;
+  }
+
+  &:hover {
+    background-color: #fbfbfb;
   }
 }
