TaskTitle changed to use contenteditable

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -20,19 +20,19 @@ h1, h2, h3, h4, p, li, a, input, textarea {
 
 // Font 
 
-h1, .h1 {
+h1 {
   font-size: 28px;
 }
 
-h2, .h2 {
+h2 {
   font-size: 24px;
 }
 
-h3, .h3 {
+h3 {
   font-size: 20px;
 }
 
-h4, .h4, .p {
+h4 {
   font-size: 16px;
 }
 
@@ -42,10 +42,6 @@ a {
 }
 
 .embed {
-  font-family: inherit;
-  width: 100%;
-  border: none;
-  text-align: inherit;
   word-wrap: break-word;
   white-space: pre-wrap;
 }
