--- a/src/app/stylesheets/_content_window.scss
+++ b/src/app/stylesheets/_content_window.scss
@@ -93,6 +93,10 @@
     vertical-align: middle;
     display: inline-block;
   }
+
+  svg {
+    padding: 8px 0; // padding 8px to vertically center element without any labels 
+  }
 }
 
 #tasks-container {
