Change positioning of label based on clicked element

--- a/src/app/stylesheets/_content_window.scss
+++ b/src/app/stylesheets/_content_window.scss
@@ -103,7 +103,7 @@
 #tasks-container {
   overflow-y: auto;
   height: calc(100% - 48px);
-  padding: 4px 8px 4px 0;
+  padding: 0 8px 4px 0;
 
   .group {
     text-transform: uppercase;
