--- a/src/app/stylesheets/_content_window.scss
+++ b/src/app/stylesheets/_content_window.scss
@@ -43,6 +43,9 @@
   .card {
     height: calc(100% - 24px);
     flex: 0 0 auto;
+
+    display: flex;
+    flex-direction: column;
   }
 }
 
@@ -52,6 +55,11 @@
   & > .embed {
     width: 100%;
   }
+}
+
+#task-detail-container {
+  overflow-y: auto;
+  margin-top: 8px;
 }
 
 .taskinfo-component {
