Implement task adding on client side

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -41,6 +41,11 @@ a {
   color: $blue;
 }
 
+input {
+  font-family: inherit;
+  font-weight: inherit;
+}
+
 .embed {
   word-wrap: break-word;
   white-space: pre-wrap;
