Add ability to remove due date

--- a/src/app/stylesheets/_content_window.scss
+++ b/src/app/stylesheets/_content_window.scss
@@ -82,6 +82,10 @@
   flex-flow: wrap;
 }
 
+#task-due .remove-icon:active {
+  transform: translateY(2px);
+}
+
 #tasks-filter {
   overflow-x: auto;
   white-space: nowrap;
