--- a/src/login/login.css
+++ b/src/login/login.css
@@ -9,7 +9,7 @@ body, h1, h2, h3, p {
 }
 
 /* full screen container */
-#login {
+.root {
   height: 100vh;
   width: 100vw;
   overflow-y: auto;
@@ -19,7 +19,7 @@ body, h1, h2, h3, p {
 }
 
 /* container */
-#login-box {
+.container {
   background-color: #eee;
   border-radius: 16px;
   padding: 20px;
@@ -28,13 +28,13 @@ body, h1, h2, h3, p {
 }
 
 @media only screen and (max-width: 800px) {
-  #login-box {
+  .container {
     width: 80vw;
   }
 }
 
 @media only screen and (min-width: 800px) {
-  #login-box {
+  .container {
     width: 640px;
   }
 }
@@ -65,7 +65,7 @@ form {
   margin: 5px 0;
 }
 
-#session_login, #session_password {
+input[type="email"], input[type="password"] {
   border: none;
   border-radius: 4px;
   border-bottom: 2px solid transparent;
