--- a/src/app/stylesheets/_modals.scss
+++ b/src/app/stylesheets/_modals.scss
@@ -1,5 +1,6 @@
 @import './global';
-@import './calendar';
+@import './color_picker';
+@import './date_picker';
 
 // Modals 
 .modal {
@@ -74,11 +75,10 @@
   }
 }
 
-#add-task-modal {
+#add-task-modal, #add-subject-modal, #add-category-modal {
   @extend %small-modal;
 
-  #add-task-input {
-    width: 200px;
+  .name-input {
     border: none;
     border-bottom: 2px solid transparent;
     padding: 8px;
@@ -92,7 +92,7 @@
     transform: translateX(2px);
   }
 
-  & > * {
+  & > div > * {
     vertical-align: middle;
   }
 }
