Fix rendering issues in TaskInfo regarding element width

--- a/src/app/stylesheets/_date_picker.scss
+++ b/src/app/stylesheets/_date_picker.scss
@@ -6,7 +6,7 @@
 
   input {
     border: none;
-    width: 100%;
+    width: calc(100% - 8px);
     cursor: pointer;
     border-bottom: 2px solid transparent;
 
