--- a/src/app/stylesheets/_global.scss
+++ b/src/app/stylesheets/_global.scss
@@ -39,11 +39,11 @@ $light-background: #f8f8fa;
 }
 
 %align-with-icon {
-  p ,svg {
+  h1, h2, h3, h4, p, svg {
     @extend %vertical-align-middle;
   }
 
-  p {
+  h1, h2, h3, h4, p {
     margin-left: 4px;
   }
 }
