--- a/src/app/stylesheets/_top_bar.scss
+++ b/src/app/stylesheets/_top_bar.scss
@@ -48,8 +48,9 @@
     cursor: pointer;
   }
 
-  .add-to-list-icon {
+  .settings-icon, .add-to-list-icon {
     fill: white;
+    margin-right: 4px;
   }
 
   h4 {
