Display tasklist information in settings

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -96,3 +96,8 @@ svg {
 .overview-description {
   color: $dark-background;
 }
+
+.subheading {
+  text-transform: uppercase;
+  font-weight: 400;
+}
