--- a/src/app/stylesheets/_modals.scss
+++ b/src/app/stylesheets/_modals.scss
@@ -28,7 +28,7 @@
   border-radius: 16px;
 
   // Children 
-  .remove-icon {
+  & > .remove-icon {
     position: absolute;
     top: 12px;
     right: 12px;
@@ -55,6 +55,10 @@
 
     & > div:not(:last-child) {
       margin-bottom: 8px;
+    }
+
+    .label > * {
+      @extend %vertical-align-middle;
     }
   }
 }
