Allow users to add labels from menu

--- a/src/app/stylesheets/_modals.scss
+++ b/src/app/stylesheets/_modals.scss
@@ -57,7 +57,7 @@
       margin-bottom: 8px;
     }
 
-    .label > * {
+    .label > *, .add-icon {
       @extend %vertical-align-middle;
     }
   }
