--- a/src/app/stylesheets/_content_window.scss
+++ b/src/app/stylesheets/_content_window.scss
@@ -81,6 +81,12 @@
   flex-flow: wrap;
 }
 
+#task-description p:focus {
+  a {
+    cursor: auto !important;
+  }
+}
+
 #task-due .remove-icon:active {
   transform: translateY(2px);
 }
