--- a/src/app/stylesheets/_top_bar.scss
+++ b/src/app/stylesheets/_top_bar.scss
@@ -48,7 +48,7 @@
     cursor: pointer;
   }
 
-  .settings-icon, .add-to-list-icon {
+  .user-icon, .info-icon, .settings-icon, .add-to-list-icon {
     fill: white;
     margin-right: 4px;
   }
