--- a/public/index.css
+++ b/public/index.css
@@ -9,14 +9,11 @@ body {
 h1, h2, h3, p, li {
   font-weight: 300;
   margin: 0;
+  color: #332927;
 }
 
-h1 {
+h1, h2 {
   color: #d17b46;
-}
-
-p {
-  font-size: 20px;
 }
 
 a, a:visited {
@@ -54,12 +51,20 @@ button, button:active, button:focus {
   display: inline;
 }
 
-#title, #content {
-  padding: 20px 40px;
+.orange {
+  background: #d17b46;
 }
 
-#title, #nav {
-  background: #d17b46;
+.orange h1, .orange h2, .orange p, .orange a, .orange a:visited {
+  color: white;
+}
+
+.center {
+  text-align: center;
+}
+
+#title, #content {
+  padding: 20px 40px;
 }
 
 #title > div {
@@ -69,26 +74,91 @@ button, button:active, button:focus {
 
 #title h1 {
   font-size: 40px;
-  color: white;
 }
 
-svg.logo {
+img.logo {
   height: 150px;
   width: 150px;
   margin-right: 30px;
   vertical-align: middle;
 }
 
-#nav > ul {
-  padding: 12px 24px;
+.nav > ul {
   margin: 0;
+  padding: 0;
 }
 
-#nav li {
-  padding: 8px;
+.nav li {
+  padding: 0 8px;
   display: inline-block;
 }
 
-#nav a, #nav a:visited {
-  color: white;
+.columns {
+  display: flex;
+  align-items: center;
+}
+
+@media only screen and (min-width: 600px) {
+  .block {
+    padding: 64px 0;
+  }
+
+  .explanation, .graphic {
+    flex: auto;
+  }
+
+  .explanation {
+    width: 38%;
+  }
+
+  .graphic {
+    width: 60%;
+  }
+
+  .graphic img {
+    width: 95%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .block {
+    padding: 32px 0;
+  }
+
+  .columns {
+    flex-wrap: wrap;
+  }
+
+  .explanation, .graphic {
+    width: 100%;
+  }
+
+  .explanation {
+    order: 0;
+  }
+
+  .graphic {
+    order: 1;
+    padding: 12px 0;
+  }
+
+  .graphic img {
+    width: 100%;
+  }
+}
+
+.graphic {
+  text-align: center;
+}
+
+#ready p {
+  padding: 8px 0;
+}
+
+.nav {
+  padding: 24px;
+}
+
+#copyright {
+  padding: 0 8px;
 }
