--- a/public/article.css
+++ b/public/article.css
@@ -11,8 +11,8 @@ html, body {
   padding: 10px 0 10px 0;
 }
 
-h1, h2, h3, p {
-  font-weight: 400;
+h1, h2, h3, p, li {
+  font-weight: 300;
 }
 
 h1 {
