--- a/public/article.css
+++ b/public/article.css
@@ -11,7 +11,7 @@ html, body {
   padding: 10px 0 10px 0;
 }
 
-h1, h2, h3, p, li {
+h1, h2, h3, h4, p, ul, li {
   font-weight: 300;
 }
 
@@ -44,4 +44,8 @@ img.logo {
   img.logo {
     display: none;
   }
+}
+
+.version {
+  color: #d17b46;
 }
