--- a/src/app/stylesheets/_top_bar.scss
+++ b/src/app/stylesheets/_top_bar.scss
@@ -34,6 +34,12 @@
   & > * {
     @extend %vertical-align-middle;
   }
+
+  @media only screen and (max-width: 500px) {
+    h1 {
+      display: none;
+    }
+  }
 }
 
 // Title of the tasklist 
@@ -43,6 +49,8 @@
 }
 
 #user {
+  flex: none;
+
   & > * {
     @extend %vertical-align-middle;
     cursor: pointer;
@@ -56,6 +64,12 @@
   h4 {
     flex: none;
     margin: 0 4px;
+  }
+
+  @media only screen and (max-width: 700px) {
+    h4 {
+      display: none;
+    }
   }
 
   #avatar {
