Style the main UI for mobile

--- a/src/app/stylesheets/_date_picker.scss
+++ b/src/app/stylesheets/_date_picker.scss
@@ -6,7 +6,7 @@
 
   input {
     border: none;
-    width: 204px;
+    width: 100%;
     cursor: pointer;
     border-bottom: 2px solid transparent;
 
