--- a/src/app/stylesheets/_content_window.scss
+++ b/src/app/stylesheets/_content_window.scss
@@ -33,6 +33,21 @@
   flex: 1 1 auto;
 }
 
+@media only screen and (max-width: 700px) {
+  .left-view {
+    height: calc(100% - 16px);
+    width: calc(45% - 16px);
+    padding: 8px;
+    font-size: 14px;
+  }
+
+  .right-view {
+    height: calc(100% - 16px);
+    width: calc(55% - 16px);
+    padding: 8px;
+  }
+}
+
 #taskinfo {
   font-size: 18px; 
   display: flex;
@@ -45,6 +60,23 @@
 
     display: flex;
     flex-direction: column;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  #taskinfo {
+    font-size: 14px;
+
+    .card {
+      height: calc(100% - 12px);
+      width: calc(100% - 12px) !important;
+      padding: 6px;
+      display: flex !important; // Somehow this is necessary
+    }
+  }
+
+  #task-title h2 {
+    font-size: 18px;
   }
 }
 
@@ -127,6 +159,31 @@
     &:hover {
       background-color: #fbfbfb;
     }
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .side {
+    width: 100% !important;
+    display: block !important;
+    margin-top: 8px !important;
+
+    & > * {
+      display: inline-block !important;
+      vertical-align: middle !important;
+      margin-right: 4px !important;
+    }
+  }
+
+  .card {
+    width: calc(100% - 6px) !important;
+    margin-top: 4px !important;
+    display: block !important;
+    padding: 6px !important;
+  }
+
+  .overview-title {
+    font-size: 18px;
   }
 }
 
