Fix issue where date box was not stretched completely

--- a/src/app/stylesheets/_date_picker.scss
+++ b/src/app/stylesheets/_date_picker.scss
@@ -4,6 +4,10 @@
   margin-left: 8px;
   flex: 1 1 100%;
 
+  .react-datepicker__input-container {
+    width: 100%;
+  }
+
   input {
     border: none;
     width: 100%;
